estilos seccion hotel-photos hecho

--- a/styles/home/_home.scss
+++ b/styles/home/_home.scss
@@ -3,3 +3,4 @@
 @import './templates/video-presentation.scss';
 @import './templates/facilities.scss';
 @import './templates/menu.scss';
+@import './templates/hotel-photos.scss';
