estilos seccion satisfaction

--- a/styles/common-templates/_variables.scss
+++ b/styles/common-templates/_variables.scss
@@ -7,6 +7,7 @@ $color-blanco-roto: #F9F9F9;
 $color-oscuro: #222222;
 $color-gris-oscuro: #333333;
 $color-gris-roto: #C2C2C2;
+$color-gris-oscurecido: #999999;
 
 @mixin section-title{
     font-size: 3.5rem;
