--- a/styles/home/_home.scss
+++ b/styles/home/_home.scss
@@ -4,3 +4,4 @@
 @import './templates/facilities.scss';
 @import './templates/menu.scss';
 @import './templates/hotel-photos.scss';
+@import './templates/satisfaction.scss';
