--- a/styles/common-templates/_front.scss
+++ b/styles/common-templates/_front.scss
@@ -5,7 +5,7 @@
 
     &__banner{
         padding: 3rem 1rem;
-        color: white;
+        color: $color-blanco;
         &__subtitle{
             @include archivo-font;
             font-size: .8rem;
@@ -28,7 +28,7 @@
             font-size: .9rem;
             font-weight: 700;
             text-decoration: none;
-            color: white;
+            color: $color-blanco;
             display: inline-block;
             border: 2px solid #FFFFFF54;
             padding: 1.4rem 2.5rem;
@@ -50,7 +50,7 @@
         &__label{
             display: block;
             @include roboto-font;
-            color: white;
+            color: $color-blanco;
             font-weight: 700;
             margin-bottom: 1.2rem;
         }
@@ -80,7 +80,7 @@
             @include archivo-font;
             border: none;
             background-color: #BEAD8E;
-            color: white;
+            color: $color-blanco;
             padding: 1.4rem 2rem;
             text-transform: uppercase;
             font-size: 0.9rem;
