--- a/styles/common-templates/_header.scss
+++ b/styles/common-templates/_header.scss
@@ -11,7 +11,7 @@
     align-items: center;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: $color-blanco;
     padding: 1rem 1.5rem;
     filter: drop-shadow(#00000060 0 0 3px);
     z-index: 50;
@@ -34,7 +34,7 @@
             @include archivo-font;
             padding: .4rem .8rem;
             display: inline-block;
-            background-color: white;
+            background-color: $color-blanco;
             filter: drop-shadow(#8B8B8B60 0 0 10px);
             font-size: 2rem;
             vertical-align: middle;
