--- a/styles/home/templates/_rooms.scss
+++ b/styles/home/templates/_rooms.scss
@@ -39,7 +39,7 @@
                 display: inline-flex;
                 gap: 1rem;
                 align-items: center;
-                background-color: white;
+                background-color: $color-blanco;
                 position: relative;
             }
 
@@ -49,7 +49,7 @@
                 width: 90%;
                 margin: 0 auto;
                 margin-top: -1.5rem;
-                background-color: white;
+                background-color: $color-blanco;
                 position: relative;
                 padding: 1rem 2rem;
                 &__text-container{
@@ -102,12 +102,12 @@
 
         .swiper-button-prev{
             left: 3%;
-            background-color: white;
+            background-color: $color-blanco;
         }
    
         .swiper-button-next{
             right: 3%;
-            background-color: white;
+            background-color: $color-blanco;
         }
 
         .swiper-button-prev::after, .swiper-button-next::after{
