--- a/styles/home/templates/_video-presentation.scss
+++ b/styles/home/templates/_video-presentation.scss
@@ -15,7 +15,7 @@
     &__title{
         @include old-standard-font;
         @include section-title;
-        color: white;
+        color: $color-blanco;
         width: 80%;
         margin-bottom: 1.5rem;
     }
@@ -39,7 +39,7 @@
         font-size: .9rem;
         font-weight: 700;
         text-decoration: none;
-        color: white;
+        color: $color-blanco;
         display: inline-block;
         padding: 1.4rem 2.5rem;
         letter-spacing: .2rem;
