--- a/styles/index.scss
+++ b/styles/index.scss
@@ -26,4 +26,5 @@ body {
 @import './common-templates/variables.scss';
 @import './common-templates/header.scss';
 @import './common-templates/front.scss';
+@import './common-templates/footer.scss';
 @import './home/home.scss';
