--- a/styles/common-templates/_header.scss
+++ b/styles/common-templates/_header.scss
@@ -14,7 +14,7 @@
     background-color: $color-blanco;
     padding: 1rem 1.5rem;
     filter: drop-shadow(#00000060 0 0 3px);
-    z-index: 50;
+    z-index: 10;
     &__hamburger-button{
         background-color: transparent;
         border: none;
@@ -42,7 +42,7 @@
         }
 
         &__text-container{
-            @include roboto-font;
+            @include archivo-font;
             display: inline-block;
             vertical-align: middle;
             font-size: 1rem;
@@ -54,8 +54,21 @@
         width: 55%;
     }
 
-    .links-container{
+    &__links-container{
         display: none;
+
+        list-style: none;
+
+        &__link{
+            margin-bottom: 1.5rem;
+            &__text{
+                @include archivo-font;
+                font-weight: 600;
+                text-decoration: none;
+                color: $color-oscuro;
+    
+            }
+        }
     }
 
     &__buttons{
@@ -71,5 +84,25 @@
                 margin-right: 1.2rem;
             }
         }
+    }
+}
+
+.show-links{
+    width: 100%;
+    padding: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 0;
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: $color-blanco;
+    filter: drop-shadow(#8B8B8B60 0 0 10px);
+}
+
+.x-icon{
+    padding: .28rem;
+    img{
+        width: 15px;
     }
 }
