--- a/styles/index.scss
+++ b/styles/index.scss
@@ -27,4 +27,6 @@ body {
 @import './common-templates/header.scss';
 @import './common-templates/front.scss';
 @import './common-templates/footer.scss';
+@import './common-templates/identifier.scss';
 @import './home/home.scss';
+@import './about/about.scss';
