--- a/styles/common-templates/_variables.scss
+++ b/styles/common-templates/_variables.scss
@@ -8,6 +8,7 @@ $color-oscuro: #222222;
 $color-gris-oscuro: #333333;
 $color-gris-roto: #C2C2C2;
 $color-gris-oscurecido: #999999;
+$color-oscuro-mas-claro: #292929;
 
 @mixin section-title{
     font-size: 3.4rem;
