estilos pagina room-page hechos

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -20,3 +20,4 @@ body {
 @import './common-templates/identifier.scss';
 @import './home/home.scss';
 @import './about/about.scss';
+@import './room-list/room-list.scss';
