--- a/styles/index.css
+++ b/styles/index.css
@@ -983,4 +983,96 @@ body {
 }
 .counter__images-swiper .swiper-pagination-bullet-active {
   background-color: #BDAC8D;
+}
+
+.rooms {
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
+  text-align: right;
+}
+.rooms__order-by-price {
+  font-family: "Roboto", sans-serif;
+  background-color: #F9F9F9;
+  border: 1px solid #999999;
+  padding: 0.5rem 1rem;
+  margin-right: 2rem;
+  margin-bottom: 2rem;
+  font-weight: 700;
+}
+.rooms__grid-container {
+  text-align: center;
+  padding: 0 1.5rem;
+}
+.rooms__grid-container__room {
+  padding: 1rem 0;
+  margin-bottom: 0.5rem;
+}
+.rooms__grid-container__room__image-link {
+  display: block;
+  margin-bottom: -2rem;
+}
+.rooms__grid-container__room__image-link__image {
+  width: 100%;
+  aspect-ratio: 16/9;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.rooms__grid-container__room__room-perks {
+  padding: 0.8rem 1.5rem;
+  list-style: none;
+  display: inline-flex;
+  gap: 1rem;
+  align-items: center;
+  background-color: #ffffff;
+  position: relative;
+}
+.rooms__grid-container__room__name {
+  display: inline-block;
+  font-family: "Old Standard TT", serif;
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: -0.05rem;
+  color: #111111;
+  text-decoration: none;
+  margin-bottom: 0.5rem;
+}
+.rooms__grid-container__room__description {
+  font-family: "Roboto", sans-serif;
+  color: #777777;
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+  padding: 0 1rem;
+}
+.rooms__grid-container__room__price {
+  font-family: "Archivo", sans-serif;
+  display: inline-block;
+  font-size: 1rem;
+  color: #BDAC8D;
+  font-weight: 700;
+  margin-right: 1rem;
+}
+.rooms__grid-container__room__book-button {
+  font-family: "Archivo", sans-serif;
+  display: inline-block;
+  font-size: 1rem;
+  color: #BDBDBD;
+  font-weight: 700;
+  text-decoration: none;
+}
+.rooms__pagination {
+  display: block;
+  text-align: center;
+  word-spacing: 0.3rem;
+}
+.rooms__pagination__page {
+  display: inline-block;
+  font-family: "Roboto", sans-serif;
+  text-decoration: none;
+  color: #111111;
+  letter-spacing: -0.05rem;
+  padding: 0.7rem 0.9rem;
+}
+.rooms__pagination__page--active {
+  background-color: #BDAC8D;
+  color: #ffffff;
 }/*# sourceMappingURL=index.css.map */
