estilos de la pagina room details hechos

--- a/styles/common-templates/_variables.scss
+++ b/styles/common-templates/_variables.scss
@@ -9,6 +9,7 @@ $color-gris-oscuro: #333333;
 $color-gris-roto: #C2C2C2;
 $color-gris-oscurecido: #999999;
 $color-oscuro-mas-claro: #292929;
+$color-rosa: #DE5777;
 
 @mixin section-title{
     font-size: 3.4rem;
