--- a/styles/index.scss
+++ b/styles/index.scss
@@ -21,3 +21,4 @@ body {
 @import './home/home.scss';
 @import './about/about.scss';
 @import './room-list/room-list.scss';
+@import './room-details/room-details.scss';
