--- a/styles/common-templates/_front.scss
+++ b/styles/common-templates/_front.scss
@@ -70,7 +70,7 @@
 
         &__date-input::-webkit-inner-spin-button,
         &__date-input::-webkit-calendar-picker-indicator {
-            content: url('../../assets/icons/home-page/calendar.png');
+            background-image: url('../../assets/icons/home-page/calendar.png');
             position: absolute;
             left: 0;
             font-size: 1.1rem;
