--- a/styles/index.scss
+++ b/styles/index.scss
@@ -22,3 +22,4 @@ body {
 @import './about/about.scss';
 @import './room-list/room-list.scss';
 @import './room-details/room-details.scss';
+@import './offers/offers.scss';
