--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,3 +23,4 @@ body {
 @import './room-list/room-list.scss';
 @import './room-details/room-details.scss';
 @import './offers/offers.scss';
+@import './contact/contact.scss';
